# frootai

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  action.yml  marketplace.json  package.json  validate-output.txt  website-implementation-plan.md
.factory/: fai-catalog.json
.github/: CODEOWNERS  RELEASE_TEMPLATE.md  copilot-instructions.md
.husky/: pre-commit
agents/: README.md  fai-a2a-expert.agent.md  fai-accessibility-expert.agent.md  fai-adr-writer.agent.md  fai-ag-ui-expert.agent.md  fai-agentic-retriever.agent.md  fai-ai-agents-expert.agent.md  fai-ai-infra-expert.agent.md  fai-angular-expert.agent.md  fai-api-gateway-designer.agent.md  fai-architect.agent.md  fai-autogen-expert.agent.md  fai-azure-ai-foundry-expert.agent.md  fai-azure-ai-search-expert.agent.md  fai-azure-aks-expert.agent.md  fai-azure-apim-expert.agent.md  fai-azure-cdn-expert.agent.md  fai-azure-container-apps-expert.agent.md  fai-azure-cosmos-db-expert.agent.md  fai-azure-devops-expert.agent.md  fai-azure-event-hubs-expert.agent.md  fai-azure-functions-expert.agent.md  fai-azure-identity-expert.agent.md  fai-azure-key-vault-expert.agent.md  fai-azure-logic-apps-expert.agent.md  fai-azure-monitor-expert.agent.md  fai-azure-networking-expert.agent.md  fai-azure-openai-expert.agent.md  fai-azure-policy-expert.agent.md  fai-azure-service-bus-expert.agent.md  fai-azure-sql-expert.agent.md  fai-azure-storage-expert.agent.md  fai-batch-processing-expert.agent.md  fai-blazor-expert.agent.md  fai-browser-agent.agent.md  fai-bun-expert.agent.md  fai-capacity-planner.agent.md  fai-cicd-pipeline-expert.agent.md  fai-cloudflare-expert.agent.md  fai-code-reviewer.agent.md  (+236 more)
api/: package.json  wrangler.toml
app-site/: package-lock.json  package.json
bicep-registry/: ai-landing-zone.bicep  enterprise-rag.bicep
cli/: README.md  bin.js  cli.js  package.json
config/: ab-testing.json  agent-fai-prompt.js  enterprise-edition.json  spec-template.json
docs/: F4-GitHub-Agentic-OS.md  O3-MCP-Tools-Functions.md  README.md  admin-guide.md  api-reference.md  architecture-overview.md  contributor-guide.md  user-guide-complete.md
docs-site/: DEPLOYMENT-GUIDE.md  docusaurus.config.ts  package-lock.json  sidebars.ts
engine/: context-resolver.js  index.js  manifest-reader.js  mcp-bridge.js  test.js
fai-protocol/: README.md
functions/: openapi.json  package.json  server.js
instructions/: README.md  ai-prompt-safety-waf.instructions.md  arch-linux-waf.instructions.md  aspnet-waf.instructions.md  astro-waf.instructions.md  azure-ai-document-intelligence-waf.instructions.md  azure-ai-language-waf.instructions.md  azure-ai-speech-waf.instructions.md  azure-bicep-avm.instructions.md  bicep-code-best-practices.instructions.md  bicep-waf.instructions.md  cost-python.instructions.md  cost-typescript.instructions.md  cpp-waf.instructions.md  csharp-mcp-development.instructions.md  csharp-waf.instructions.md  dart-flutter-waf.instructions.md  dataverse-waf.instructions.md  debian-waf.instructions.md  design-patterns-waf.instructions.md  django-waf.instructions.md  docker-waf.instructions.md  dotnet-architecture-waf.instructions.md  drawio-waf.instructions.md  ef-core-waf.instructions.md  electron-waf.instructions.md  fastapi-waf.instructions.md  flask-waf.instructions.md  froot-f1-genai-foundations.instructions.md  froot-f2-llm-selection.instructions.md  froot-f3-ai-glossary.instructions.md  froot-f4-agentic-os.instructions.md  froot-o1-semantic-kernel.instructions.md  froot-o2-agent-coding.instructions.md  froot-o3-mcp-patterns.instructions.md  froot-o4-foundry-config.instructions.md  froot-o5-gpu-infra.instructions.md  froot-o6-copilot-extend.instructions.md  froot-r1-prompt-patterns.instructions.md  froot-r2-rag-coding.instructions.md  (+32 more)
marketplace/: SUBMISSION-GUIDE.md  azure-listing.json  github-listing.json
python-mcp/: README.md  pyproject.toml
python-mcp/frootai_mcp/: __init__.py  knowledge.json  server.py
python-mcp/frootai_mcp.egg-info/: PKG-INFO
python-sdk/: CHANGELOG.md  README.md  pyproject.toml
python-sdk/frootai/: __init__.py  cli.py  client.py  evaluation.py  knowledge.json  plays.py  search-index.json
python-sdk/frootai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python-sdk/tests/: test_sdk.py
(+3746 files in other folders)
