[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frootai-mcp"
version = "5.1.0"
description = "FrootAI MCP Server — 45 tools, 3 resources, 6 prompts, 104 plays, 862+ primitives. FastMCP-powered Python implementation of the FAI Engine."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Pavleen Bali", email = "pavleenbali@frootai.dev"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["mcp", "ai", "architecture", "azure", "copilot", "claude", "frootai", "agents"]
dependencies = ["mcp[cli]>=1.9.0"]

[project.urls]
Homepage = "https://frootai.dev"
Repository = "https://github.com/frootai/frootai"
Documentation = "https://frootai.dev/setup-guide"
"Bug Tracker" = "https://github.com/frootai/frootai/issues"

[project.scripts]
frootai-mcp-py = "frootai_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["frootai_mcp*"]

[tool.setuptools.package-data]
frootai_mcp = ["knowledge.json", "search-index.json"]
